--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -135,7 +135,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Lost\KeyManager.h" />
+    <ClInclude Include="Chunk.h" />
+    <ClInclude Include="Lost\InputManager.h" />
     <ClInclude Include="Lost\Camera.h" />
     <ClInclude Include="Lost\DeltaTime.h" />
     <ClInclude Include="Lost\Image.h" />
@@ -166,9 +167,13 @@
     <ClInclude Include="sokol\util\sokol_spine.h" />
     <ClInclude Include="STBImplementation.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Tile.h" />
+    <ClInclude Include="TileEntity.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lost\KeyManager.cpp" />
+    <ClCompile Include="Chunk.cpp" />
+    <ClCompile Include="Lost\InputManager.cpp" />
     <ClCompile Include="Lost\Camera.cpp" />
     <ClCompile Include="Lost.cpp" />
     <ClCompile Include="Lost\DeltaTime.cpp" />
@@ -177,6 +182,9 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lost\Shader.cpp" />
     <ClCompile Include="Lost\ShaderManager.cpp" />
+    <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="TileEntity.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
