Add lua support, Create world generation, Add tile loading, Add generator loading, Add tile connection system and loader [Woopsies big one]

--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -78,6 +78,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>E:\Coding\SokolTest\lua542\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -94,6 +95,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>E:\Coding\SokolTest\lua542\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -110,6 +112,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>E:\Coding\SokolTest\lua542\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,6 +129,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>E:\Coding\SokolTest\lua542\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,15 +140,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Chunk.h" />
+    <ClInclude Include="Generator.h" />
+    <ClInclude Include="JSON.h" />
     <ClInclude Include="Lost\InputManager.h" />
     <ClInclude Include="Lost\Camera.h" />
     <ClInclude Include="Lost\DeltaTime.h" />
     <ClInclude Include="Lost\Image.h" />
     <ClInclude Include="Lost\ImageManager.h" />
     <ClInclude Include="Lost.h" />
+    <ClInclude Include="Lost\LuaInit.h" />
     <ClInclude Include="Lost\Shader.h" />
     <ClInclude Include="Lost\ShaderManager.h" />
     <ClInclude Include="Lost\Transform2D.h" />
+    <ClInclude Include="Random.h" />
     <ClInclude Include="SokolReference.h" />
     <ClInclude Include="sokol\sokol_app.h" />
     <ClInclude Include="sokol\sokol_args.h" />
@@ -169,21 +177,26 @@
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileEntity.h" />
+    <ClInclude Include="TileManager.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chunk.cpp" />
+    <ClCompile Include="Generator.cpp" />
+    <ClCompile Include="JSON.cpp" />
     <ClCompile Include="Lost\InputManager.cpp" />
     <ClCompile Include="Lost\Camera.cpp" />
     <ClCompile Include="Lost.cpp" />
     <ClCompile Include="Lost\DeltaTime.cpp" />
     <ClCompile Include="Lost\Image.cpp" />
     <ClCompile Include="Lost\ImageManager.cpp" />
+    <ClCompile Include="Lost\LuaInit.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lost\Shader.cpp" />
     <ClCompile Include="Lost\ShaderManager.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TileEntity.cpp" />
+    <ClCompile Include="TileManager.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
