--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -140,6 +140,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Chunk.h" />
+    <ClInclude Include="Collider.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="Generator.h" />
     <ClInclude Include="JSON.h" />
     <ClInclude Include="Lost\InputManager.h" />
@@ -190,6 +192,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chunk.cpp" />
+    <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Generator.cpp" />
     <ClCompile Include="JSON.cpp" />
     <ClCompile Include="Lost\InputManager.cpp" />
