--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Generator.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="JSON.h" />
     <ClInclude Include="Lost\InputManager.h" />
     <ClInclude Include="Lost\Camera.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Lost\Shader.h" />
     <ClInclude Include="Lost\ShaderManager.h" />
     <ClInclude Include="Lost\Transform2D.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="SokolReference.h" />
     <ClInclude Include="sokol\imgui\imconfig.h" />
@@ -195,6 +197,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Generator.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="JSON.cpp" />
     <ClCompile Include="Lost\InputManager.cpp" />
     <ClCompile Include="Lost\Camera.cpp" />
@@ -206,6 +209,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lost\Shader.cpp" />
     <ClCompile Include="Lost\ShaderManager.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="sokol\imgui\imgui.cpp" />
     <ClCompile Include="sokol\imgui\imgui_demo.cpp" />
     <ClCompile Include="sokol\imgui\imgui_draw.cpp" />
