Remove use of JSON files, convert to lua. Add function that converts lua stack to a JSONObject. Convert all current JSON files to ones which work with the new lua tile data system

--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -98,7 +98,7 @@
       <AdditionalIncludeDirectories>E:\Coding\SokolTest\lua542\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -132,7 +132,7 @@
       <AdditionalIncludeDirectories>E:\Coding\SokolTest\lua542\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
