--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -172,9 +172,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BoxWindow.h" />
+    <ClInclude Include="BuildingTileEntities.h" />
+    <ClInclude Include="ChestTileEntity.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Container.h" />
+    <ClInclude Include="ConveyerBeltTileEntity.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="fontstash.h" />
     <ClInclude Include="Generator.h" />
@@ -238,9 +241,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoxWindow.cpp" />
+    <ClCompile Include="ChestTileEntity.cpp" />
     <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Container.cpp" />
+    <ClCompile Include="ConveyerBeltTileEntity.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Generator.cpp" />
     <ClCompile Include="HUDWindow.cpp" />
