--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="Lost\Transform2D.h" />
     <ClInclude Include="Lost\UIManager.h" />
     <ClInclude Include="Lost\UIWindow.h" />
+    <ClInclude Include="OreDrill.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Lost\RenderExtras.h" />
@@ -267,6 +268,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lost\Shader.cpp" />
     <ClCompile Include="Lost\ShaderManager.cpp" />
+    <ClCompile Include="OreDrill.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="sokol\imgui\imgui.cpp" />
     <ClCompile Include="sokol\imgui\imgui_demo.cpp" />
