--- a/SokolTest.vcxproj
+++ b/SokolTest.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="Container.h" />
     <ClInclude Include="ConveyerBeltTileEntity.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="FactoryTileEntity.h" />
     <ClInclude Include="fontstash.h" />
     <ClInclude Include="Generator.h" />
     <ClInclude Include="HUDWindow.h" />
@@ -250,6 +251,7 @@
     <ClCompile Include="Container.cpp" />
     <ClCompile Include="ConveyerBeltTileEntity.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="FactoryTileEntity.cpp" />
     <ClCompile Include="Generator.cpp" />
     <ClCompile Include="HUDWindow.cpp" />
     <ClCompile Include="Item.cpp" />
